data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1656.wast
;; 7. **Test Description**: Use multiple nested `block` constructs with a `br_if` instruction conditionally targeting the second innermost block. Check if the control flow and operand stack are correctly managed upon taking the branch.    - **Constraint Checked**: Precise index handling for intermediate block targeting.    - **Relation to Mismanagement of Block Nesting**: Mismanagement can lead to exiting the wrong block or malformed stack after branch.

(assert_invalid
  (module (func $test-mismanagement-of-block-nesting
    (block (result i32)
      (block (result i32)
        (i32.const 0) (i32.const 1) (br_if 1 (i32.const 1))
      (i32.const 2))
    (i32.const 3))
  ))
  "type mismatch"
)